<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_create_account_message"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/dm_login_status_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_create" />

    <TextView
        android:id="@+id/tv_create_account_status"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/dm_login_status_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_status"/>

    <TextView
        android:id="@+id/tv_sign_out"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/dm_login_status_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in_different"/>

    <Button
        android:id="@+id/btn_create_account_username_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_continue" />

</LinearLayout>