<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_status"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_status" />
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_image_content_desc"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_marginTop="@dimen/dm_nav_bar_height"
        android:layout_width="200dp"
        android:layout_height="71dp"/>
    <com.facebook.login.widget.LoginButton

        android:id="@+id/btn_fb_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
    <Button
        android:id="@+id/btn_proceed"
        android:text="@string/txt_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>

</LinearLayout>